--- a/Style.css
+++ b/Style.css
@@ -75,7 +75,7 @@ section.product {
     background-size: cover;
 }
 .product-container {
-    display: justify;
+    display: flex;
     flex-wrap: justify;
     justify-content: space-around; 
 }
