--- a/Style.css
+++ b/Style.css
@@ -33,7 +33,8 @@ section.about{
     width:auto;
     text-align:center;
 }
-section.about.h3{
+section.about.h3,section.about.h2
+{
     text-align:center;
 }
 section.contact{
