--- a/Style.css
+++ b/Style.css
@@ -26,17 +26,17 @@ section.home{
     height: 500px;
     padding-top: 1000px;
 }
-section.about{
-    height: 200px;
+section.about {
     background-color: antiquewhite;
-    margin:auto;
-    width:auto;
-    text-align:center;
+    text-align: center;
+    padding: 50px 20px;
 }
-section.about.h3,section.about.h2
-{
-    text-align:center;
+section.about h2,
+section.about h3 {
+    text-align: center;
+    margin-bottom: 20px;
 }
+
 section.contact{
     height: 600px;
 }
