--- a/Style.css
+++ b/Style.css
@@ -25,6 +25,7 @@ section.home{
     padding-top: 1000px;
 }
 section.about {
+    margin:auto;
     text-align: center;
     background-color: antiquewhite;
     padding: 50px 20px;
@@ -35,15 +36,12 @@ section.about {
 section.about h2 {
     font-size: 36px;
     margin-bottom: 20px;
-    
 }
-
 section.about p {
     font-size: 20px;
     line-height: 1.6;
     margin-bottom: 10px;
 }
-
 section.contact{
     height: 600px;
 }
